Normal Update & Security Update

--- a/src/main/resources/languages/messages_de.properties
+++ b/src/main/resources/languages/messages_de.properties
@@ -1,3 +1,13 @@
 title=Willkommen
 welcome_message=Willkommen auf unserer Website!
 description=Dies ist eine Beschreibung.
+register.title=Registrieren
+register.username.label=Benutzername
+register.email.label=E-Mail
+register.password.label=Passwort
+register.phoneNumber.label=Telefonnummer
+register.discordId.label=Discord ID
+register.terms.label=Ich akzeptiere die AGB
+register.terms.link=AGB
+register.signUp.button=Registrieren
+register.signIn.link=Anmelden
