--- a/src/main/resources/languages/messages_en.properties
+++ b/src/main/resources/languages/messages_en.properties
@@ -1,3 +1,13 @@
 title=Welcome
 welcome_message=Welcome to our website!
 description=This is a description.
+register.title=Sign up
+register.username.label=Username
+register.email.label=E-Mail
+register.password.label=Password
+register.phoneNumber.label=Phone Number
+register.discordId.label=Discord ID
+register.terms.label=I accept the terms and conditions
+register.terms.link=Terms and Conditions
+register.signUp.button=Sign up
+register.signIn.link=Sign in
