--- a/src/main/resources/languages/messages_de.properties
+++ b/src/main/resources/languages/messages_de.properties
@@ -11,3 +11,10 @@ register.terms.label=Ich akzeptiere die AGB
 register.terms.link=AGB
 register.signUp.button=Registrieren
 register.signIn.link=Anmelden
+register.mustbeaccept=Sie müssen die AGB akzeptieren.
+register.username.required=Benutzername ist erforderlich
+register.email.required=E-Mail ist erforderlich
+register.email.unique=Die E-Mail-Adresse muss eindeutig sein
+register.password.required=Passwort ist erforderlich
+register.phonenumber.required=Telefonnummer ist erforderlich
+register.discordid.required=Discord-ID ist erforderlich
