--- a/src/main/resources/languages/messages_en.properties
+++ b/src/main/resources/languages/messages_en.properties
@@ -11,3 +11,10 @@ register.terms.label=I accept the terms and conditions
 register.terms.link=Terms and Conditions
 register.signUp.button=Sign up
 register.signIn.link=Sign in
+register.mustbeaccept=You must accept the terms and conditions.
+register.username.required=Username is required
+register.email.required=Email is required
+register.email.unique=Email must be unique
+register.password.required=Password is required
+register.phonenumber.required=Phone number is required
+register.discordid.required=Discord ID is required
