--- a/src/main/resources/languages/messages_de.properties
+++ b/src/main/resources/languages/messages_de.properties
@@ -18,3 +18,17 @@ register.email.unique=Die E-Mail-Adresse muss eindeutig sein
 register.password.required=Passwort ist erforderlich
 register.phonenumber.required=Telefonnummer ist erforderlich
 register.discordid.required=Discord-ID ist erforderlich
+login.title=Anmelden
+login.email.label=E-Mail
+login.password.label=Passwort
+login.signIn.button=Anmelden
+login.forgotPassword.link=Passwort vergessen?
+login.error=Die E-Mail-Adresse oder das Passwort ist falsch.
+login.register.link=Registrieren
+forgotPassword.title=Passwort vergessen
+forgotPassword.email.label=E-Mail
+forgotPassword.submit.button=Absenden
+forgotPassword.login.link=Anmelden
+forgotPassword.register.link=Registrieren
+forgotPassword.success=Es wurde eine E-Mail mit weiteren Anweisungen an Sie gesendet.
+forgotPassword.error=Die E-Mail-Adresse ist nicht registriert.
