--- a/src/main/resources/languages/messages_en.properties
+++ b/src/main/resources/languages/messages_en.properties
@@ -18,3 +18,17 @@ register.email.unique=Email must be unique
 register.password.required=Password is required
 register.phonenumber.required=Phone number is required
 register.discordid.required=Discord ID is required
+login.title=Sign in
+login.email.label=E-Mail
+login.password.label=Password
+login.signIn.button=Sign in
+login.forgotPassword.link=Forgot password?
+login.error=The email or password is incorrect.
+login.register.link=Sign up
+forgotPassword.title=Forgot Password
+forgotPassword.email.label=Email
+forgotPassword.submit.button=Submit
+forgotPassword.login.link=Login
+forgotPassword.register.link=Register
+forgotPassword.success=An email has been sent to you with further instructions.
+forgotPassword.error=The email address is not registered.
