--- a/src/main/resources/languages/messages_en.properties
+++ b/src/main/resources/languages/messages_en.properties
@@ -18,6 +18,11 @@ register.email.unique=Email must be unique
 register.password.required=Password is required
 register.phonenumber.required=Phone number is required
 register.discordid.required=Discord ID is required
+register.username.placeholder=Enter your username
+register.email.placeholder=Enter your Email
+register.password.placeholder=Enter your password
+register.phoneNumber.placeholder=Enter your phone number
+register.discordId.placeholder=Enter your Discord ID
 login.title=Sign in
 login.email.label=E-Mail
 login.password.label=Password
@@ -25,6 +30,8 @@ login.signIn.button=Sign in
 login.forgotPassword.link=Forgot password?
 login.error=The email or password is incorrect.
 login.register.link=Sign up
+login.email.placeholder=Email
+login.password.placeholder=Password
 forgotPassword.title=Forgot Password
 forgotPassword.email.label=Email
 forgotPassword.submit.button=Submit
