--- a/src/main/resources/languages/messages_de.properties
+++ b/src/main/resources/languages/messages_de.properties
@@ -18,6 +18,11 @@ register.email.unique=Die E-Mail-Adresse muss eindeutig sein
 register.password.required=Passwort ist erforderlich
 register.phonenumber.required=Telefonnummer ist erforderlich
 register.discordid.required=Discord-ID ist erforderlich
+register.username.placeholder=Geben Sie Ihren Benutzernamen ein
+register.email.placeholder=Geben Sie Ihre E-Mail ein
+register.password.placeholder=Geben Sie Ihr Passwort ein
+register.phoneNumber.placeholder=Geben Sie Ihre Telefonnummer ein
+register.discordId.placeholder=Geben Sie Ihre Discord-ID ein
 login.title=Anmelden
 login.email.label=E-Mail
 login.password.label=Passwort
@@ -25,6 +30,8 @@ login.signIn.button=Anmelden
 login.forgotPassword.link=Passwort vergessen?
 login.error=Die E-Mail-Adresse oder das Passwort ist falsch.
 login.register.link=Registrieren
+login.email.placeholder=E-Mail
+login.password.placeholder=Passwort
 forgotPassword.title=Passwort vergessen
 forgotPassword.email.label=E-Mail
 forgotPassword.submit.button=Absenden
