--- a/src/main/resources/languages/messages_de.properties
+++ b/src/main/resources/languages/messages_de.properties
@@ -8,6 +8,12 @@ register.password.label=Passwort
 register.phoneNumber.label=Telefonnummer
 register.discordId.label=Discord ID
 register.terms.label=Ich akzeptiere die AGB
+register.interests.label=Interessen / Aktivitäten
+register.interests.software=Softwareentwicklung
+register.interests.technology=Technologie
+register.interests.gaming=Gaming
+register.interests.music=Musik
+register.interests.art=Kunst
 register.terms.link=AGB
 register.signUp.button=Registrieren
 register.signIn.link=Anmelden
@@ -30,6 +36,7 @@ login.signIn.button=Anmelden
 login.forgotPassword.link=Passwort vergessen?
 login.error=Die E-Mail-Adresse oder das Passwort ist falsch.
 login.register.link=Registrieren
+login.support.link=Benötigen Sie Unterstützung?
 login.email.placeholder=E-Mail
 login.password.placeholder=Passwort
 forgotPassword.title=Passwort vergessen
