--- a/src/main/resources/languages/messages_en.properties
+++ b/src/main/resources/languages/messages_en.properties
@@ -8,6 +8,12 @@ register.password.label=Password
 register.phoneNumber.label=Phone Number
 register.discordId.label=Discord ID
 register.terms.label=I accept the terms and conditions
+register.interests.label=Interests / Activites
+register.interests.software=Software Development
+register.interests.technology=Technology
+register.interests.gaming=Gaming
+register.interests.music=Music
+register.interests.art=Art
 register.terms.link=Terms and Conditions
 register.signUp.button=Sign up
 register.signIn.link=Sign in
@@ -32,6 +38,7 @@ login.error=The email or password is incorrect.
 login.register.link=Sign up
 login.email.placeholder=Email
 login.password.placeholder=Password
+login.support.link=Need Support ?
 forgotPassword.title=Forgot Password
 forgotPassword.email.label=Email
 forgotPassword.submit.button=Submit
