--- a/src/main/resources/languages/messages_de.properties
+++ b/src/main/resources/languages/messages_de.properties
@@ -2,11 +2,6 @@ title=Willkommen
 welcome_message=Willkommen auf unserer Website!
 description=Dies ist eine Beschreibung.
 register.title=Registrieren
-register.username.label=Benutzername
-register.email.label=E-Mail
-register.password.label=Passwort
-register.phoneNumber.label=Telefonnummer
-register.discordId.label=Discord ID
 register.terms.label=Ich akzeptiere die AGB
 register.interests.label=Interessen / Aktivitäten
 register.interests.software=Softwareentwicklung
@@ -29,14 +24,20 @@ register.email.placeholder=Geben Sie Ihre E-Mail ein
 register.password.placeholder=Geben Sie Ihr Passwort ein
 register.phoneNumber.placeholder=Geben Sie Ihre Telefonnummer ein
 register.discordId.placeholder=Geben Sie Ihre Discord-ID ein
+register.welcome.title=Willkommen
+register.welcome.message1=Wir freuen uns, Sie auf unserer Plattform begrüßen zu dürfen. Unser Ziel ist es, Ihnen die bestmögliche Erfahrung zu bieten.
+register.welcome.message2=Wachsen und entwickeln Sie sich mit uns, um Ihre Ziele zu erreichen. Bitte füllen Sie das Registrierungsformular aus, um Teil unserer Community zu werden.
+register.welcome.message3=Wenn Sie Fragen haben, zögern Sie nicht,
+register.icon.feedback=Wir sind hier, um Ihr Feedback zu hören!
+register.icon.email=Schreiben Sie uns eine E-Mail an
+register.welcome.contact=kontaktieren Sie unser Support-Team
 login.title=Anmelden
-login.email.label=E-Mail
-login.password.label=Passwort
 login.signIn.button=Anmelden
 login.forgotPassword.link=Passwort vergessen?
 login.error=Die E-Mail-Adresse oder das Passwort ist falsch.
 login.register.link=Registrieren
 login.support.link=Benötigen Sie Unterstützung?
+login.warranty.message=Bitte teilen Sie Ihr Passwort nicht mit anderen!
 login.email.placeholder=E-Mail
 login.password.placeholder=Passwort
 forgotPassword.title=Passwort vergessen
@@ -46,3 +47,10 @@ forgotPassword.login.link=Anmelden
 forgotPassword.register.link=Registrieren
 forgotPassword.success=Es wurde eine E-Mail mit weiteren Anweisungen an Sie gesendet.
 forgotPassword.error=Die E-Mail-Adresse ist nicht registriert.
+general.servers.managemodules.antispam.timelimit.tag=Zeitlimit
+general.servers.managemodules.antispam.timelimit.label=Geben Sie Ihr Zeitlimit ein
+general.servers.managemodules.antispam.oldvalue=Alter Wert:
+general.servers.managemodules.antispam.newvalue=Neuer Wert
+general.servers.managemodules.antispam.messagelimit.tag=Nachrichtenlimit
+general.servers.managemodules.antispam.messagelimit.label=Geben Sie Ihr Nachrichtenlimit ein
+general.servers.managemodules.antispam.button.label=Einstellungen speichern
