--- a/src/main/resources/languages/messages_en.properties
+++ b/src/main/resources/languages/messages_en.properties
@@ -2,11 +2,6 @@ title=Welcome
 welcome_message=Welcome to our website!
 description=This is a description.
 register.title=Sign up
-register.username.label=Username
-register.email.label=E-Mail
-register.password.label=Password
-register.phoneNumber.label=Phone Number
-register.discordId.label=Discord ID
 register.terms.label=I accept the terms and conditions
 register.interests.label=Interests / Activites
 register.interests.software=Software Development
@@ -29,9 +24,14 @@ register.email.placeholder=Enter your Email
 register.password.placeholder=Enter your password
 register.phoneNumber.placeholder=Enter your phone number
 register.discordId.placeholder=Enter your Discord ID
+register.welcome.title=Welcome
+register.welcome.message1=We're thrilled to have you on our platform. Our goal is to provide you with the best experience possible.
+register.welcome.message2=Grow and develop with us to achieve your goals. Please fill out the registration form to become part of our community.
+register.welcome.message3=If you have any questions, feel free to
+register.icon.feedback=We're here to listen to your feedback!
+register.icon.email=Email us at
+register.welcome.contact=contact our support team
 login.title=Sign in
-login.email.label=E-Mail
-login.password.label=Password
 login.signIn.button=Sign in
 login.forgotPassword.link=Forgot password?
 login.error=The email or password is incorrect.
@@ -39,6 +39,7 @@ login.register.link=Sign up
 login.email.placeholder=Email
 login.password.placeholder=Password
 login.support.link=Need Support ?
+login.warranty.message=Please do not share your password with anyone!.
 forgotPassword.title=Forgot Password
 forgotPassword.email.label=Email
 forgotPassword.submit.button=Submit
@@ -46,3 +47,10 @@ forgotPassword.login.link=Login
 forgotPassword.register.link=Register
 forgotPassword.success=An email has been sent to you with further instructions.
 forgotPassword.error=The email address is not registered.
+general.servers.managemodules.antispam.timelimit.tag=Time Limit
+general.servers.managemodules.antispam.timelimit.label=Enter your time limit
+general.servers.managemodules.antispam.oldvalue=Old Value:
+general.servers.managemodules.antispam.newvalue=New Value
+general.servers.managemodules.antispam.messagelimit.tag=Message Limit
+general.servers.managemodules.antispam.messagelimit.label=Enter your message limit
+general.servers.managemodules.antispam.button.label=Save Settings
